--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -90,7 +90,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2018 Darek, Inc.</p>
+        <p>&copy; 2018 Darek, Inc i nie tylkoa.</p>
       </footer>
     </div> <!-- /container -->
 
