--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -81,7 +81,7 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Blob</h2>
+          <h2>ba bla bla</h2>
           <p> test test test</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
