Zmiana cholernego tytułu. D

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -54,7 +54,7 @@
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -68,10 +68,9 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Moje  dsfa sdf książki</h2>
+          <h2>Mojedsfa książki</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="./book.html" role="button">książki &raquo;</a></p>
         </div>
