--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <h2>Mojedsfa książki darek</h2>
+          <h2>Mojedsfa książki darek 1</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="./book.html" role="button">książki &raquo;</a></p>
         </div>
