--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -89,7 +89,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2018 Darek</p>
+        <p>&copy; 2018 Darek dsafdas</p>
       </footer>
     </div> <!-- /container -->
 
